@@ -1,5 +1,6 @@
 package com.ecogem.backend.post.service;
 
+import com.ecogem.backend.auth.security.CustomUserDetails;
 import com.ecogem.backend.companies.domain.Company;
 import com.ecogem.backend.companies.repository.CompanyRepository;
 import com.ecogem.backend.post.dto.*;
@@ -12,53 +13,39 @@ import com.ecogem.backend.post.repository.PostRepository;
 import com.ecogem.backend.store.domain.Store;
 import com.ecogem.backend.store.repository.StoreRepository;
 import lombok.RequiredArgsConstructor;
+import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.util.ArrayList;
-import java.util.LinkedHashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.stream.Collectors;
+import java.util.*;
 
 @Service
 @RequiredArgsConstructor
 public class PostService {
 
-    private final PostRepository postRepo;
-    private final StoreRepository storeRepo;
+    private final PostRepository    postRepo;
+    private final StoreRepository   storeRepo;
     private final CommentRepository commentRepo;
     private final CompanyRepository companyRepo;
 
-    /** 반경 필터링 */
-    public List<PostResponseDto> listPosts(double lat, double lng, int radiusKm) {
-        List<PostProjection> list = postRepo.findWithinRadius(lat, lng, radiusKm);
+    /** radiusKm 있을 때 회사 위치기준 필터, 없으면 전체 */
+    public List<PostResponseDto> listPostsByCompany(Long userId, Integer radiusKm) {
+        Company company = companyRepo.findByUserId(userId)
+                .orElseThrow(() -> new IllegalArgumentException("No company for user_id=" + userId));
 
-        return list.stream()
-                .map(p -> PostResponseDto.builder()
+        List<PostProjection> list = (radiusKm != null)
+                ? postRepo.findWithinRadius(company.getLatitude(), company.getLongitude(), radiusKm)
+                : postRepo.findAllOrdered();
+
+        return list.stream().map(p ->
+                PostResponseDto.builder()
                         .postId(p.getPostId())
                         .storeName(p.getStoreName())
                         .content(p.getContent())
                         .status(p.getStatus())
                         .createdAt(p.getCreatedAt())
                         .build()
-                )
-                .collect(Collectors.toList());
-    }
-
-
-    /** radius 미선택 시: 전체 게시글 최신 작성순 */
-    public List<PostResponseDto> listAllPosts() {
-        return postRepo.findAllOrdered().stream()
-                .map(p -> PostResponseDto.builder()
-                        .postId(p.getPostId())
-                        .storeName(p.getStoreName())
-                        .content(p.getContent())
-                        .status(p.getStatus())
-                        .createdAt(p.getCreatedAt())
-                        .build()
-                )
-                .collect(Collectors.toList());
+        ).toList();
     }
 
     /**
@@ -66,11 +53,9 @@ public class PostService {
      */
     @Transactional(readOnly = true)
     public PostDetailResponseDto getPostDetail(Long postId) {
-        // 1) Post 조회
         Post post = postRepo.findById(postId)
                 .orElseThrow(() -> new IllegalArgumentException("Post not found: " + postId));
 
-        // 2) 댓글(flat) 작성순 조회 + DTO 변환
         List<CommentDetailResponseDto> flat = commentRepo
                 .findByPostIdOrderByCreatedAtAsc(postId)
                 .stream()
@@ -82,31 +67,23 @@ public class PostService {
                         .parentId(c.getParent() != null ? c.getParent().getId() : null)
                         .createdAt(c.getCreatedAt())
                         .deleted(c.isDeleted())
-                        .build()
-                )
-                .collect(Collectors.toList());
+                        .build())
+                .toList();
 
-        // 3) ID→DTO 매핑
         Map<Long, CommentDetailResponseDto> map = new LinkedHashMap<>();
         flat.forEach(dto -> map.put(dto.getCommentId(), dto));
 
-        // 4) 트리 구조로 묶기
         List<CommentDetailResponseDto> roots = new ArrayList<>();
-        for (CommentDetailResponseDto dto : map.values()) {
+        for (var dto : map.values()) {
             if (dto.getParentId() == null) {
                 roots.add(dto);
             } else {
-                CommentDetailResponseDto parentDto = map.get(dto.getParentId());
-                if (parentDto != null) {
-                    parentDto.getChildren().add(dto);
-                } else {
-                    // 혹시 부모가 없는 경우엔 최상위로 올리거나 무시
-                    roots.add(dto);
-                }
+                var parent = map.get(dto.getParentId());
+                if (parent != null) parent.getChildren().add(dto);
+                else roots.add(dto);
             }
         }
 
-        // 5) 최종 DTO 조립 (children 가진 roots 리스트 사용)
         return PostDetailResponseDto.builder()
                 .postId(post.getId())
                 .storeId(post.getStore().getId())
@@ -118,41 +95,36 @@ public class PostService {
                 .build();
     }
 
-    /** userId 에 해당하는 회사명/가게명을 반환 */
     private String resolveAuthorName(Long userId) {
-        // 회사(userId) 조회 시 존재하면 회사명
         return companyRepo.findByUserId(userId)
                 .map(Company::getName)
-                .orElseGet(() -> {
-                    // 없으면 가게(userId) 조회 - StoreRepository 에 findByUserId 메서드가 필요합니다
-                    return storeRepo.findByUserId(userId)
-                            .map(Store::getName)
-                            .orElse("알 수 없음");
-                });
+                .orElseGet(() -> storeRepo.findByUserId(userId)
+                        .map(Store::getName)
+                        .orElse("알 수 없음"));
     }
-
 
     /**
      * 게시글 작성
-     * 테스트용으로 storeId를 직접 받음
      */
     @Transactional
     public PostCreateResponseDto createPost(PostCreateRequestDto dto) {
-        Store store = storeRepo.findById(dto.getStoreId())
-                .orElseThrow(() -> new IllegalArgumentException("Store not found: " + dto.getStoreId()));
+        // storeId는 로그인된 STORE_OWNER의 정보에서 꺼냄
+        Long storeId = ((CustomUserDetails)
+                SecurityContextHolder.getContext().getAuthentication().getPrincipal()
+        ).getUser().getStore().getId();
 
-        Post post = Post.builder()
+        Store store = storeRepo.findById(storeId)
+                .orElseThrow(() -> new IllegalArgumentException("Store not found: " + storeId));
+
+        Post saved = postRepo.save(Post.builder()
                 .store(store)
                 .content(dto.getContent())
-                // status 는 엔티티에서 @Builder.Default 로 ACTIVE 로 초기화됨
-                .build();
-
-        Post saved = postRepo.save(post);
+                .build()
+        );
 
         return PostCreateResponseDto.builder()
                 .postId(saved.getId())
                 .build();
-
     }
 
     /**
@@ -163,21 +135,18 @@ public class PostService {
             Long postId,
             PostStatusUpdateRequestDto dto
     ) {
+        Long storeId = ((CustomUserDetails)
+                SecurityContextHolder.getContext().getAuthentication().getPrincipal()
+        ).getUser().getStore().getId();
+
         Post post = postRepo.findById(postId)
                 .orElseThrow(() -> new IllegalArgumentException("Post not found: " + postId));
 
-        // 권한 체크: 요청한 storeId 와 실제 post.store.id 가 같아야
-        if (!post.getStore().getId().equals(dto.getStoreId())) {
+        if (!post.getStore().getId().equals(storeId))
             throw new IllegalArgumentException("권한이 없습니다.");
-        }
 
-        // 문자열 → enum 변환, 잘못된 값이면 IllegalArgumentException 발생
         PostStatus newStatus = PostStatus.valueOf(dto.getStatus());
-
-        post.setStatus(newStatus);  // 엔티티 상태 변경
-
-        // @Transactional 이므로 flush 시점에 UPDATE 쿼리 실행
-        // 또는 명시적 save 호출 가능: postRepo.save(post);
+        post.setStatus(newStatus);
 
         return PostStatusUpdateResponseDto.builder()
                 .postId(post.getId())
@@ -185,21 +154,22 @@ public class PostService {
                 .build();
     }
 
-
     /**
-     * 게시글 내용(content) 수정
+     * 게시글 수정
      */
     @Transactional
     public PostUpdateResponseDto updatePost(Long postId, PostUpdateRequestDto dto) {
+        Long storeId = ((CustomUserDetails)
+                SecurityContextHolder.getContext().getAuthentication().getPrincipal()
+        ).getUser().getStore().getId();
+
         Post post = postRepo.findById(postId)
                 .orElseThrow(() -> new IllegalArgumentException("Post not found: " + postId));
 
-        if (!post.getStore().getId().equals(dto.getStoreId())) {
+        if (!post.getStore().getId().equals(storeId))
             throw new IllegalArgumentException("권한이 없습니다.");
-        }
 
         post.setContent(dto.getContent());
-
         return PostUpdateResponseDto.builder()
                 .postId(post.getId())
                 .build();
@@ -209,22 +179,22 @@ public class PostService {
      * 게시글 삭제
      */
     @Transactional
-    public PostDeleteResponseDto deletePost(Long postId, Long storeId) {
+    public PostDeleteResponseDto deletePost(Long postId) {
+        Long storeId = ((CustomUserDetails)
+                SecurityContextHolder.getContext().getAuthentication().getPrincipal()
+        ).getUser().getStore().getId();
+
         Post post = postRepo.findById(postId)
                 .orElseThrow(() -> new IllegalArgumentException("Post not found: " + postId));
 
-        if (!post.getStore().getId().equals(storeId)) {
+        if (!post.getStore().getId().equals(storeId))
             throw new IllegalArgumentException("권한이 없습니다.");
-        }
 
-        postRepo.delete(post); // 댓글과 대댓글은 자동으로 삭제됨
-
+        postRepo.delete(post);
         return PostDeleteResponseDto.builder()
                 .success(true)
                 .code(200)
                 .message("POST_DELETE_SUCCESS")
                 .build();
     }
-
-
 }
